--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Tabla dinámica desde Google Sheets</title>
+  <title>Tabla desde Google Sheets</title>
   <style>
     body {
       background-color: #000;
@@ -10,9 +10,7 @@
       font-family: Arial, sans-serif;
       padding: 20px;
     }
-    h2 {
-      text-align: center;
-    }
+    h2 { text-align: center; }
     table {
       border-collapse: collapse;
       width: 100%;
@@ -23,48 +21,52 @@
       padding: 10px;
       text-align: left;
     }
-    th {
-      background-color: #222;
-    }
-    tr:nth-child(even) {
-      background-color: #222; /* gris oscuro */
-    }
-    tr:nth-child(odd) {
-      background-color: #000; /* negro */
-    }
+    th { background-color: #222; }
+    tr:nth-child(even) { background-color: #222; }
+    tr:nth-child(odd) { background-color: #000; }
   </style>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
   <h2>Tabla desde Google Sheets</h2>
   <table id="miTabla"></table>
 
   <script>
-    // 🔹 Sustituye esta URL por la URL pública CSV de tu Google Sheet
-    const url = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRKjM6EtJwKRvQ-QFOSqjaC-_eiv0KhHwHlvJEx4PEs4z3p1Fytv2-28zS_yfwcWBiTE11VZNnWEfUP/pub?output=csv";
+    google.charts.load('current', {'packages':['table']});
+    google.charts.setOnLoadCallback(drawTable);
 
-    fetch(url)
-      .then(response => {
-        if (!response.ok) throw new Error("HTTP error " + response.status);
-        return response.text();
-      })
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
+    function drawTable() {
+      // Reemplaza con el ID de tu hoja de cálculo
+      const sheetId = '1Jx8AvjYbslVL7zNIGkf58-4Pysbvjl0SWdD6XxkOlL8';
+      const query = new google.visualization.Query(
+        `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?sheet=Sheet1`
+      );
+
+      query.send(response => {
+        if (response.isError()) {
+          console.error(response.getMessage(), response.getDetailedMessage());
+          document.getElementById("miTabla").innerHTML = `<tr><td colspan="100%">Error cargando hoja</td></tr>`;
+          return;
+        }
+
+        const data = response.getDataTable();
         let html = "<thead><tr>";
-        rows[0].forEach(cell => html += `<th>${cell}</th>`);
+        for (let c = 0; c < data.getNumberOfColumns(); c++) {
+          html += `<th>${data.getColumnLabel(c)}</th>`;
+        }
         html += "</tr></thead><tbody>";
-        rows.slice(1).forEach(r => {
+
+        for (let r = 0; r < data.getNumberOfRows(); r++) {
           html += "<tr>";
-          r.forEach(cell => html += `<td>${cell}</td>`);
+          for (let c = 0; c < data.getNumberOfColumns(); c++) {
+            html += `<td>${data.getValue(r,c)}</td>`;
+          }
           html += "</tr>";
-        });
+        }
         html += "</tbody>";
         document.getElementById("miTabla").innerHTML = html;
-      })
-      .catch(err => {
-        console.error("Error al cargar la hoja:", err);
-        document.getElementById("miTabla").innerHTML =
-          `<tr><td colspan="100%">Error: ${err.message}</td></tr>`;
       });
+    }
   </script>
 </body>
 </html>
