--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     function drawTable() {
       // ID de tu hoja de cálculo
       const sheetId = '1Jx8AvjYbslVL7zNIGkf58-4Pysbvjl0SWdD6XxkOlL8';
-      const sheetName = 'Sheet1'; // Cambia si tu pestaña tiene otro nombre
+      const sheetName = 'Hoja 1'; // Cambia si tu pestaña tiene otro nombre
 
       const query = new google.visualization.Query(
         `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?sheet=${sheetName}`
