--- a/index.html
+++ b/index.html
@@ -25,37 +25,51 @@
     tr:nth-child(even) { background-color: #222; }
     tr:nth-child(odd) { background-color: #000; }
   </style>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <!-- Tabletop.js -->
+  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.0/src/tabletop.min.js"></script>
 </head>
 <body>
   <h2>Tabla desde Google Sheets</h2>
   <table id="miTabla"></table>
 
   <script>
-    google.charts.load('current', {'packages':['table']});
-    google.charts.setOnLoadCallback(drawTable);
+    const publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1Jx8AvjYbslVL7zNIGkf58-4Pysbvjl0SWdD6XxkOlL8/edit?usp=sharing';
 
-    function drawTable() {
-      // ID de tu hoja de cálculo
-      const sheetId = '1Jx8AvjYbslVL7zNIGkf58-4Pysbvjl0SWdD6XxkOlL8';
-      const sheetName = 'Hoja 1'; // Cambia si tu pestaña tiene otro nombre
+    function init() {
+      Tabletop.init({
+        key: publicSpreadsheetUrl,
+        simpleSheet: true,
+        callback: showInfo
+      });
+    }
 
-      const query = new google.visualization.Query(
-        `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?sheet=${sheetName}`
-      );
+    function showInfo(data, tabletop) {
+      if (!data || data.length === 0) {
+        document.getElementById("miTabla").innerHTML = '<tr><td colspan="100%">No hay datos</td></tr>';
+        return;
+      }
 
-      query.send(response => {
-        if (response.isError()) {
-          console.error(response.getMessage(), response.getDetailedMessage());
-          document.getElementById("miTabla").innerHTML = `<tr><td colspan="100%">Error cargando hoja</td></tr>`;
-          return;
-        }
+      // Crear encabezados
+      let html = '<thead><tr>';
+      Object.keys(data[0]).forEach(key => {
+        html += `<th>${key}</th>`;
+      });
+      html += '</tr></thead><tbody>';
 
-        const data = response.getDataTable();
-        let html = "<thead><tr>";
-        for (let c = 0; c < data.getNumberOfColumns(); c++) {
-          html += `<th>${data.getColumnLabel(c)}</th>`;
-        }
-        html += "</tr></thead><tbody>";
+      // Crear filas
+      data.forEach(row => {
+        html += '<tr>';
+        Object.values(row).forEach(value => {
+          html += `<td>${value}</td>`;
+        });
+        html += '</tr>';
+      });
 
-        for (let r
+      html += '</tbody>';
+      document.getElementById('miTabla').innerHTML = html;
+    }
+
+    window.addEventListener('DOMContentLoaded', init);
+  </script>
+</body>
+</html>
