--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <table id="miTabla"></table>
 
   <script>
-    const publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1Jx8AvjYbslVL7zNIGkf58-4Pysbvjl0SWdD6XxkOlL8/edit?usp=sharing';
+    const publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRKjM6EtJwKRvQ-QFOSqjaC-_eiv0KhHwHlvJEx4PEs4z3p1Fytv2-28zS_yfwcWBiTE11VZNnWEfUP/pub?output=csv';
 
     function init() {
       Tabletop.init({
